--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .terraform.lock.hcl
 .terraform/providers/registry.terraform.io/hashicorp/google/5.1.0/windows_386/terraform-provider-google_v5.1.0_x5.exe
+terraform/.terraform/providers/registry.terraform.io/hashicorp/google/5.1.0/windows_386/terraform-provider-google_v5.1.0_x5.exe
+terraform/terraform.tfstate
