--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .terraform/providers/registry.terraform.io/hashicorp/google/5.1.0/windows_386/terraform-provider-google_v5.1.0_x5.exe
 terraform/.terraform/providers/registry.terraform.io/hashicorp/google/5.1.0/windows_386/terraform-provider-google_v5.1.0_x5.exe
 terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
