--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 terraform/.terraform/providers/registry.terraform.io/hashicorp/google/5.1.0/windows_386/terraform-provider-google_v5.1.0_x5.exe
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
+build/code.zip
