--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ terraform/.terraform/providers/registry.terraform.io/hashicorp/google/5.1.0/wind
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 build/code.zip
+terraform/.terraform.tfstate.lock.info
