new bucket for data files read function

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 build/code.zip
 terraform/.terraform.tfstate.lock.info
+test-data.txt
