--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -13,10 +13,17 @@ grpc-google-iam-v1==0.12.6
 grpcio==1.59.0
 grpcio-status==1.59.0
 idna==3.4
+numpy==1.26.0
+pandas==2.1.1
 proto-plus==1.22.3
 protobuf==4.24.4
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyjson==1.4.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
 rsa==4.9
+six==1.16.0
+tzdata==2023.3
 urllib3==2.0.6
